# Mini_SLAM

./: CMakeLists.txt  README.md  map.txt  package.xml
config_files/: 2DLidar_SLAM.lua  config_files_test.cc
include/include_files/: include_files.h
include/source_code/: occupancy_grid.cpp  point_cloud.cpp  probability_grid.cpp
launch/: cartographer_node.launch  node1.launch  service.launch
src/: node1.cpp  node2.cpp  write_to_file_client.cpp  write_to_file_server.cpp
